[package]
name = "rust-minimal-web-service-hyper"
version = "0.1.0"
authors = ["Mario Zupan <mario@zupzup.org>"]
edition = "2018"

[dependencies]
futures = { version = "0.3.6", default-features = false, features = ["async-await"] }

hyper = {version="0.14", features = ["full"]}
rustls = "0.21.2"
rustls-pemfile = "1.0.2"
tokio-rustls = { version = "0.24.0", default-features = false }
futures-util = "0.3"
tokio = {version="1.20", features=["full"]}

serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
route-recognizer = "0.2"
bytes = "0.5"
async-trait = "0.1"

[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = 'abort'
